# adw-temp-verification

./: .adw.yaml  .gitignore  README.md  pyproject.toml
.claude/commands/: README.md  conditional_docs.md  health_check.md  in_loop_review.md  install.md  prepare_app.md  prime.md  review_bg_iso.md  start.md  test.md  test_e2e.md  track_agentic_kpis.md
.claude/commands/e2e/: README.md  test_basic_query.md  test_export_functionality.md
app_docs/: agentic_kpis.md  feature-7b529110-power-sqrt-operations.md
specs/: issue-1-adw-7b529110-sdlc_planner-add-power-sqrt-operations.md
src/mathcalc/: __init__.py  calculator.py
tests/: test_calculator.py
