[project]
name = "mathcalc"
version = "0.1.0"
description = "Simple calculator library"
requires-python = ">=3.11"
dependencies = [
    "adw-framework",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
adw-framework = { path = "/Users/dev3/code4b/adw-framework" }
